[package]
name = "cutler"
version = "0.7.4"
edition = "2024"
description = "Powerful, declarative settings management for your Mac, with speed."
homepage = "https://hitblast.github.io/cutler"
repository = "https://github.com/hitblast/cutler"
keywords = ["macos", "macos-automation", "cutler"]
readme = "README.md"
license = "MIT"
build = "build.rs"
categories = ["command-line-utilities"]

[dependencies]
toml = "0.8"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.52"
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
ureq = "3.0.11"
semver = "1.0.26"
anyhow = "1.0.98"
tokio = { version = "1", features = ["full"] }
anstyle = "1.0.11"
toml_edit = "0.22"
dialoguer = "0.11.0"
self_update = { version = "0.42.0", features = ["compression-zip-deflate"] }
async-trait = "0.1.88"
defaults-rs = "0.1.5"

[dev-dependencies]
tempfile = "3.20.0"

[workspace]
members = [".", "xtask"]
